# loker

./: .gitignore  AST.hs  C.hs  C.hs-boot  CHelpers.hs  CodeGenMonad.hs  FEATURES  INSTALL.md  IR.hs  IR2C.hs  Parse.hs  Parsec.hs  PrettyC.hs  PrettyC.hs-boot  README.md  TODO  Translator.hs  compiler.hs  hcar.tex  loker.cabal  loker.hs  routines.c  routines.h  showIR.hs  testingtool.hs
tests/: escape-dquote-2.sh  escape-dquote-2.sh.golden  escape-dquote.sh.golden  functions.sh.golden  heredoc-newline-in-delimeter.sh  heredoc-newline-in-delimeter.sh.golden  heredoc-quoted.sh  heredoc-quoted.sh.golden  line-cont-after-space.sh  line-cont-in-dquotes.sh  line-cont-in-dquotes.sh.golden  line-cont-in-squotes.sh  line-cont-in-squotes.sh.golden  line-cont-space.sh  line-cont-space.sh.golden  line-cont.sh.golden
